invariant failure during movePrimary during cleanup

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v4.0
    • Sharding 2018-10-08
    • 68
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      One case is when clone hits an assertion here, so the cleanupOnError gets ran before setMovePrimarySourceManager was called.

      This can easily be fixed by either:
      1. Make cleanup no-op if sourceMgr doesn't exist
      or
      2. Move the scopedGuard after uassert (less future proof)

            Assignee:
            Jack Mulrow
            Reporter:
            Randolph Tan
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: