SERVER-37142 Make clearing the MovePrimarySourceManager a no-op if one doesn't exist